fixed note alignment issues

--- a/planner1/src/pages/NotesPage.css
+++ b/planner1/src/pages/NotesPage.css
@@ -3,9 +3,8 @@
 	background: linear-gradient(-45deg, black, gray, black, gray);
 	background-size: 400% 400%;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	animation: animate 60s ease infinite;
-	overflow: hidden;
 }
 
 @keyframes animate {
@@ -26,12 +25,15 @@
     width: 350px;
     margin-top: 15px;
 	margin-left: 30px;
+	margin-right: 30px;
+	margin-bottom: 15px;
     background-color: yellow;
     border-radius: 10px;
 	position: relative;
 	z-index: 1;
 	transition-timing-function: ease-out;
 	transition: 0.4s;
+	display: inline-block;
 }
 
 .notes:hover  {
